issue with page zooming in on contact page on mobiles

--- a/src/About.css
+++ b/src/About.css
@@ -60,6 +60,10 @@
   .w3-small {
     font-size: 15px !important;
   }
+  input[type="text"]:focus,
+  textarea:focus {
+    -webkit-text-size-adjust: 100%;
+}
 } 
 
 .left {
@@ -141,5 +145,10 @@ html, body, h1, h2, h3, h4, h5, h6 {
 
 html {
     -ms-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+}
+
+input[type="text"]:focus,
+textarea:focus {
     -webkit-text-size-adjust: 100%;
 }
